--- a/main.html
+++ b/main.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Architectural Information</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="container">
+        <h1>Architectural Information</h1>
 
+        <div class="imageContainer">
+            <img src="example-main-image.jpg" alt="Architectural Design">
+        </div>
+
+        <table>
+            <tr>
+                <th class="col-small">Image</th>
+                <th class="col-large">Text Content</th>
+                <th class="col-small">Image</th>
+            </tr>
+            <tr>
+                <td><img src="example-image1.jpg" alt="Image 1"></td>
+                <td>
+                    Discuss factors that are important in the design of bedrooms. Plan the size and location of closets for a typical residence. Plan furniture arrangements and more.
+                </td>
+                <td><img src="example-image2.jpg" alt="Image 2"></td>
+            </tr>
+            <tr>
+                <td><img src="example-image3.jpg" alt="Image 3"></td>
+                <td>
+                    Plan efficient kitchen layouts that cater to family needs. Identify garage space dimensions, room arrangements, and apply good design principles.
+                </td>
+                <td><img src="example-image4.jpg" alt="Image 4"></td>
+            </tr>
+        </table>
+    </div>
 </body>
-
 </html>
