--- a/main.html
+++ b/main.html
@@ -21,18 +21,18 @@
                 <th class="col-small">Image</th>
             </tr>
             <tr>
-                <td><img src="example-image1.jpg" alt="Image 1"></td>
+                <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmCy16nhIbV3pI1qLYHMJKwbH2458oiC9EmA&s" alt="Image 1"></td>
                 <td>
                     Discuss factors that are important in the design of bedrooms. Plan the size and location of closets for a typical residence. Plan furniture arrangements and more.
                 </td>
-                <td><img src="example-image2.jpg" alt="Image 2"></td>
+                <td><img src="https://img.freepik.com/free-photo/view-chameleon-with-bright-neon-colors_23-2151682707.jpg" alt="Image 2"></td>
             </tr>
             <tr>
-                <td><img src="example-image3.jpg" alt="Image 3"></td>
+                <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SRRmhH4X5N2e4QalcoxVbzYsD44C-sQv-w&s" alt="https://img.freepik.com/free-photo/view-chameleon-with-bright-neon-colors_23-2151682743.jpg"></td>
                 <td>
                     Plan efficient kitchen layouts that cater to family needs. Identify garage space dimensions, room arrangements, and apply good design principles.
                 </td>
-                <td><img src="example-image4.jpg" alt="Image 4"></td>
+                <td><img src="example-image4.jpg" alt="https://media.istockphoto.com/id/623430378/photo/photographer-always-catch-the-moment.jpg?s=612x612&w=is&k=20&c=mrakZuWKdvy-PY0-SA77KeQRACwhslXLSVADWcsdWJk="></td>
             </tr>
         </table>
     </div>
