--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
         <h1>Architectural Information</h1>
 
         <div class="imageContainer">
-            <img src="example-main-image.jpg" alt="Architectural Design">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTv9rehlsOYxwPDbTrTqBJaxhG-VxyUKySfDTd9gtH-_ObwCQFQhw8N0Z5uh7-U8XBvOcw&usqp=CAU" alt="Architectural Design">
         </div>
 
         <table>
@@ -32,7 +32,7 @@
                 <td>
                     Plan efficient kitchen layouts that cater to family needs. Identify garage space dimensions, room arrangements, and apply good design principles.
                 </td>
-                <td><img src="example-image4.jpg" alt="https://media.istockphoto.com/id/623430378/photo/photographer-always-catch-the-moment.jpg?s=612x612&w=is&k=20&c=mrakZuWKdvy-PY0-SA77KeQRACwhslXLSVADWcsdWJk="></td>
+                <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-C_UAhXq9GfuGO452EEzfbKnh1viQB9EDBQ&s" alt="https://media.istockphoto.com/id/623430378/photo/photographer-always-catch-the-moment.jpg?s=612x612&w=is&k=20&c=mrakZuWKdvy-PY0-SA77KeQRACwhslXLSVADWcsdWJk="></td>
             </tr>
         </table>
     </div>
